# cube_cpp

./: CMakeLists.txt  main  main.cpp
src/: CMakeLists.txt  lalgebra.h  main.cpp
src/lalgebra/: vec3.cpp  vec3.h  vec4.cpp  vec4.h
structure/: vec.h
test/: CMakeLists.txt  main.cpp  vec3test.cpp
test/fixtures/: vec3Test.h
